# Datalog

./: README.md  dune-project
lib/: dune  solver.ml
test/: dune  test_lap2324P3_simple.ml
